fixed error that was happening with after pseudo element on Safari. created on hover accesibility work around.

--- a/client/src/components/ArtistCard/artistCard.css
+++ b/client/src/components/ArtistCard/artistCard.css
@@ -15,7 +15,12 @@
     margin-top: 0.5rem;
 }
 
-.artist-card::after {
+.artist-card:hover {
+    box-shadow: 0 0 25px 1px rgba(255, 255, 255, 0.5);
+    border: 2px solid rgba(255, 255, 255, 1);
+}
+
+/* .artist-card::after {
     content: '';
     position: absolute;
     top: 0;
@@ -36,7 +41,7 @@
     backdrop-filter: blur(0px);
     -webkit-backdrop-filter: blur(0px);
     background: rgba(255, 255, 255, 0);
-}
+} */
 
 .artist-card img {
     display: block;
@@ -49,7 +54,7 @@
 }
 
 .artist-card .name {
-   padding: .25rem;
+    padding: 0.25rem;
 }
 
 @media (max-width: 480px) {
